# API_studies

./: .gitignore  pyproject.toml
src/fastapi_learn_project/: main.py
src/fastapi_learn_project/db/: database.py
src/fastapi_learn_project/models/: item_model.py
src/fastapi_learn_project/router/: routes.py
