[project]
name = "fastapi-learn-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo Fontana Bertoldi",email = "gustavobertoldi20@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.136.3,<0.137.0)",
    "sqlmodel (>=0.0.38,<0.0.39)"
]

[tool.poetry]
packages = [{include = "fastapi_learn_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
